Fixing the Jira API change issues (v2 no longer available)